# LockFrame

./: .gitignore  README.md  detector.hpp  lockframe.cpp  lockframe.hpp  lockframe_types.hpp  pwrdetector.cpp  pwrdetector.hpp  pwrdetector_optimized.cpp  pwrundeaddetector.cpp  pwrundeadguarddetector.cpp  undead.cpp  undead.hpp  vectorclock.cpp  vectorclock.hpp  vectorclock_types.hpp
debug/: pwr_dont_add_reads.cpp  pwr_for_undead.cpp  pwr_for_undead.hpp  pwr_no_hist_optimized.cpp  pwr_no_hist_optimized.hpp  pwr_no_syncs.cpp  pwr_paper.cpp  pwr_remove_after_sync.cpp  pwr_remove_sync_equal.cpp  pwr_shared_ptr.cpp  pwr_shared_ptr.hpp  pwrdetector_optimized_4.cpp  pwrdetector_optimized_4.hpp  pwrdetector_unoptimized.cpp  pwrundeaddetectorextraedges.cpp  pwrundeaddetectorextraedgesearly.cpp
reader/: CMakeLists.txt  README.md  reader.cpp
stats/: example_createEventTypeGraph.py  example_runMultipleTraces.py  example_runPwrUndead.py  pwrundead_all.py  pwrundead_dep_count.py  pwrundead_guards.py  pwrundead_guards_paper.py  pwrundead_idea2_extra_edges_count.py  pwrundead_performance_comparison.py
stats/results/pwrundead_all/: deps_table.csv  results.csv  timing_table.csv  trace_infos.csv  vc_exceeded_table.csv
stats/results/pwrundead_all/backup/: deps_table.csv  (+5 more)
stats/results/pwrundead_extra_edges/: results.csv
stats/results/pwrundead_guards/: deps_table.csv  results.csv  time_taken_table.csv
stats/results/pwrundead_guards_paper/: results.csv
stats/scriptsArchive/: README.md  pwrundead_all.py  pwrundead_extra_edges.py  pwrundead_guards_paper.py  pwrundead_vc_limit.py
tests/: CMakeLists.txt  README.md  lockframe_test.cpp
(+9 files in other folders)
